# bender

./: .gitignore  README.md  com.revathskumar.bender.yaml  config.yaml  esbuild.js  index.d.ts  meson.build  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yaml
data/: com.revathskumar.bender.metainfo.xml  meson.build
src/: AboutDialog.ts  ActionButton.ts  ActionsSidebar.ts  Configuration.ts  ContentListView.ts  Footer.ts  ListElem.ts  MainWindow.ts  OutputWriter.ts  SearchBar.ts  SearchFilter.ts  TextTransformer.ts  index.ts
src/actionButtons/: ToEnumButton.ts  ToHypenateButton.ts  ToLowerCaseButton.ts  ToRemoveSpaceButton.ts  ToUnderscoreButton.ts  ToUpperCaseButton.ts
src/constants/: keyval.ts
src/utils/: replaceNonBreakingSpace.ts
tests/: TextTransformer.spec.ts
